--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.6",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-redux-firebase": "^3.1.1",
     "react-scripts": "5.0.0",
     "redux-firestore": "^0.12.0",
+    "sass": "^1.49.9",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
